[package]
name = "vizmd-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "viz-server"
path = "./server/main.rs"

[[bin]]
name = "viz-client"
path = "./client/main.rs"

[dependencies]
futures-util = "0.3.31"
rand = "0.9.2"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
